# firebreak

./: .gitignore  Cargo.toml  DEEP_CODE_REVIEW_2026-07-21.md  LICENSE  README.md  build.rs
assets/: collect.ps1
src/: app_identity.rs  audit_control.rs  baseline_checks.rs  collect.rs  console.rs  elevation.rs  event_query.rs  filter_map.rs  firewall_rules.rs  listeners.rs  main.rs  model.rs  pipeline.rs  preview.rs  scope.rs  secure_dir.rs  store.rs  support.rs  syspath.rs  theme.rs  time_util.rs  ui.rs  update.rs  winhttp.rs  winpriv.rs
src/ui/: paint.rs
