[package]
name = "firebreak"
version = "0.5.0"
edition = "2021"
description = "On-demand Windows Firewall rule-usage auditor: correlates WFP audit events (5156/5157) with firewall rules to find unused and over-broad rules"
license-file = "LICENSE"

[build-dependencies]
winresource = "0.1"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
eframe = "0.29"
egui = "0.29"
egui_extras = "0.29"
png = "0.17"
quick-xml = "0.36"

[target.'cfg(windows)'.dependencies]
rfd = "0.14"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_EventLog",
    "Win32_System_Rpc",
    "Win32_System_Threading",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Security_Authentication_Identity",
    "Win32_Security_Authorization",
    "Win32_System_Console",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
opt-level = "z"
lto = true
strip = true
